<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="424dp"
        android:layout_height="112dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20px"
        android:outlineAmbientShadowColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="12dp"
                android:layout_height="60dp"
                android:layout_marginTop="20px"
                android:layout_weight="0.4"
                app:srcCompat="@drawable/netology" />

            <LinearLayout
                android:layout_width="228dp"
                android:layout_height="100dp"
                android:layout_marginTop="20px"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="238dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="20px"
                    android:layout_weight="1"
                    android:text="@string/text1"
                    android:textColor="#676767" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="258dp"
                    android:layout_height="31dp"
                    android:layout_marginLeft="20px"
                    android:layout_weight="1"
                    android:text="@string/data"
                    android:textColor="#676767" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="textView2, textView3, imageView8,menu"
                tools:ignore="UnknownId" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="5dp"
                android:layout_height="35dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="28dp"
                android:layout_weight="0.4"
                android:background="#00FDF6FE"
                app:icon="@android:drawable/ic_menu_manage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/author"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="372dp"
        android:layout_height="372dp"
        android:layout_marginTop="20dp"
        android:lineHeight="65px"
        android:outlineAmbientShadowColor="#000000"
        android:shadowColor="#000000"
        android:text="@string/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

    <FrameLayout
        android:layout_width="376dp"
        android:layout_height="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="89dp"
            android:backgroundTint="#00FDF6FE"
            android:contentDescription="@string/share"
            app:icon="@drawable/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="@+id/nrav"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.004"
            tools:checked="true"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.AppTheme.LikeButton"
            android:layout_width="32dp"
            android:layout_height="34dp"
            android:layout_marginBottom="212dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#FDF6FE"
            android:checkable="true"
            android:contentDescription="@string/like"
            app:icon="@drawable/heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/share"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginLeft="90px"
            android:layout_marginBottom="10px"
            android:text="@string/like" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="320px"
            android:text="@string/share" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="750px"
            app:srcCompat="@drawable/eyes" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="840px"
            android:text="@string/smotr" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>